backends/drm: add hack for old legacy drivers

BUG: 453860